# Zafiro

./: CMakeLists.txt  Makefile  README.md  clienteEstado.h  clienteMain.cpp  commonButton.cpp  commonButton.h  commonException.cpp  commonImgTexture.cpp  commonImgTexture.h  commonSDLException.cpp  commonSDLIMGException.cpp  commonSDLTTFException.cpp  commonSdlImgInit.cpp  commonSdlImgInit.h  commonSdlInit.h  commonSdlTtfInit.cpp  commonSocket.cpp  commonSocket.h  commonTextTexture.cpp  commonTextTexture.h  commonTexture.cpp  commonTexture.h  commonWindow.cpp  commonWindow.h
Modelo/: Character.cpp  Character.h  Model.cpp  Model.h  Pistol.cpp  Pistol.h  Projectile.cpp  Scene.cpp  Scene.h  Weapon.cpp  Weapon.h
TP-Fase1-Test/: CMakeLists.txt  Exception.cpp  ImgTexture.cpp  ImgTexture.h  Model.cpp  Model.h  Personajes.cpp  Piedra.cpp  Piedra.h  SDLException.cpp  SDLIMGException.cpp  SDLIMGException.h  Scene.cpp  Scene.h  SdlImgInit.cpp  SdlInit.cpp  SdlInit.h  SpriteRojo.h  Texture.cpp  Texture.h  View.cpp  View.h  Window.cpp  Window.h  commonSdlInit.cpp  main.cpp
TP-Fase1-Test/Archivos/: configuracion.xml  default.xml  s.xml
TP-Fase1-Test/Modelo/: Character.cpp  Character.h  Colision.cpp  Colision.h  Collision.cpp  Collision.h  CollisionSoft.cpp  CollisionSoft.h  Model.cpp  Model.h  Pistol.cpp  Pistol.h  Projectile.cpp  Projectile.h  Scene.cpp  Scene.h  Weapon.cpp  Weapon.h  dumyModel.cpp  dumyModel.h
TP-Fase1-Test/Vista/: Background.cpp  Background.h  Bullet.cpp  Bullet.h  Controler.cpp  Controler.h  Controller.cpp  Controller.h  Hielo.cpp  ImgTexture.cpp  ImgTexture.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Nivel.cpp  Nivel.h  Pasto.cpp  Pasto.h  Personajes.cpp  Personajes.h  Piedra.cpp  Piedra.h  PlataformaBlanda.cpp  PlataformaDura.cpp  PlataformaDura.h  Scene.cpp  Scene.h  SdlImgInit.cpp  SdlInit.cpp  Sprite.cpp  Sprite.h  SpriteRojo.cpp  SpriteRojo.h  Texture.cpp  View.cpp  View.h  Viewable.cpp  Viewable.h  Window.cpp  (+4 more)
TP-Fase1-Test/client/: Background.cpp  Background.h  BossSprite.cpp  BossSprite.h  Bullet.cpp  Bullet.h  ClienteLLeno.cpp  ClienteLLeno.h  Controller.cpp  Controller.h  FullHouse.cpp  FullHouse.h  Hielo.cpp  Hielo.h  Ice.cpp  Ice.h  ImgTexture.cpp  ImgTexture.h  InvalidLogin.cpp  InvalidLogin.h  MovingEnemyImg.cpp  MovingEnemyImg.h  Personajes.cpp  Personajes.h  Piedra.cpp  Piedra.h  PlataformaBlanda.cpp  PlataformaBlanda.h  PlataformaDura.cpp  PlataformaDura.h  Quit.cpp  Quit.h  SDLException.cpp  SDLException.h  SDLIMGException.cpp  SDLIMGException.h  SdlImgInit.cpp  SdlInit.cpp  SdlInit.h  Sound.cpp  (+30 more)
TP-Fase1-Test/common/: Enemy.cpp  Enemy.h  Exception.cpp  Exception.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Projectile.cpp  Projectile.h  Scene.cpp  Scene.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  pugixml.cpp  xml.cpp  xml.h
TP-Fase1-Test/server/: Boss.cpp  Boss.h  Character.cpp  Character.h  Colector.cpp  Colector.h  Collector.cpp  Collector.h  CollisionHard.cpp  CollisionHard.h  CollisionSoft.cpp  CollisionSoft.h  Interpreter.cpp  Interpreter.h  Joiner.cpp  Joiner.h  Machinegun.cpp  Machinegun.h  Model.cpp  Model.h  ModelProtocol.cpp  ModelProtocol.h  Pistol.cpp  Projectile.cpp  Projectile.h  Sender.cpp  Sender.h  SignalChecker.cpp  SignalChecker.h  SignalReceiver.cpp  SignalReceiver.h  Thread.h  Trigonometricgun.h  Weapon.cpp  Weapon.h  main.cpp  xmlServer.cpp  xmlServer.h
cmakeModules/: FindSDL2TTF.cmake
ejemploSocketThread/: CMakeLists.txt
ejemploSocketThread/HelloSocket/client/: main.cpp
ejemploSocketThread/HelloSocket/common/: Exception.cpp
ejemploSocketThread/HelloSocket/server/: main.cpp
ejemploSocketThread/HelloThread/client/: main.cpp
ejemploSocketThread/HelloThread/common/: Exception.h  Socket.cpp
ejemploSocketThread/HelloThread/server/: Colector.cpp  Colector.h  Comandos.cpp  Comandos.h  CommandFactory.cpp  CommandFactory.h  Joiner.h  Monitor.cpp  Monitor.h  Thread.h  main.cpp
